<resources>
    <string name="app_name">My Application 1</string>
    <string name="get_starterd">Get Starterd</string>
    <string name="taskmaster">TaskMaster</string>
    <string name="welcome_to_taskmaster_organize_your_week_with_taskmaster">Welcome To TaskMaster Organize Your Week With TaskMaster</string>
    <string name="today">TODAY</string>
    <string name="add_task">Add Task</string>
    <string name="week">Week</string>
    <string name="take_breakfast">Take breakfast</string>
    <string name="_10_00_am">10.00 AM</string>
    <string name="read_books">Read books</string>
    <string name="_10_00am">10.00AM</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="plan_your_week">PLAN YOUR WEEK</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="thur">Thur</string>
    <string name="_10_30_am">10.30 AM</string>
    <string name="monday">Monday</string>
    <string name="biology_lectures">Biology Lectures</string>
    <string name="have_english_class">Have English Class</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="discription">Discription</string>
    <string name="time">time</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="organize_your_life">Organize Your Life</string>
    <string name="delete01">delete01</string>
    <string name="delete2">delete2</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="workout">workout</string>
    <string name="save2">save2</string>
    <string name="delete3">delete3</string>
    <string name="save3">save3</string>
    <string name="call_family">call family</string>
    <string name="delete4">delete4</string>
    <string name="save5">save5</string>
    <string name="relax">relax</string>
    <string name="work_on_project">work on project</string>
    <string name="delete_task5">delete_task5</string>
    <string name="save_task5">save_task5</string>
    <string name="fifth_task_hint">fifth_task_hint</string>
    <string name="delete_task4">delete_task4</string>
    <string name="save_task4">save_task4</string>
    <string name="fourth_task_hint">fourth_task_hint</string>
    <string name="delete_task3">delete_task3</string>
    <string name="save_task3">save_task3</string>
    <string name="take_rest">take rest</string>
    <string name="do_project_works">do project works</string>
    <string name="go_to_the_party">go to the party</string>


</resources>