<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:background="@drawable/background1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="80dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="385dp"
            android:layout_height="689dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="106dp"
            android:layout_marginBottom="224dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mainphoto" />

        <Button
            android:id="@+id/getstart"
            android:layout_width="236dp"
            android:layout_height="56dp"
            android:layout_marginStart="17dp"
            android:background="@color/_1b2b83"
            android:text="@string/get_starterd"
            android:textColor="#DFE3E8"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.894" />

        <TextView
            android:id="@+id/API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yy"
            android:textColor="#100F0F"
            android:textColorLink="#050505"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/taskmaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskmaster"
        android:textAlignment="center"
        android:textColor="@color/_241059"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    }

</androidx.constraintlayout.widget.ConstraintLayout>